John Collins (52):
      initial commit
      update text
      update css
      update css
      Update custom.css
      Update custom.css
      Update custom.css
      update css
      Merge branch 'master' of https://github.com/jcollins-bioinfo/jcollins-bioinfo.github.io update css
      update css
      update css
      update css
      add gfonts css
      update css
      add nexgendx brand anim
      add nexgendx brand anim
      add nexgendx brand anim
      add nexgendx brand anim
      Set theme jekyll-theme-architect
      add nexgendx brand anim
      Merge branch 'master' of https://github.com/jcollins-bioinfo/jcollins-bioinfo.github.io
      Delete nexgendx-animalogo-full_1-1.mov
      Add files via upload
      Update index.html
      Create README.md
      Update contact info
      Updated email under contact info section
      Update README.md
      Delete index.html
      Add files via upload
      Update resume.html
      Update to 2022 valid resume info
      Update index.html
      Update index.html
      Delete preview.html
      Delete resume.html
      Delete _config.yml
      Delete docs directory
      Update custom.css
      Update index.html
      Update index.html
      Update index.html
      Update index.html
      A single-file copy of my current LI profile
      Delete John Collins _ LinkedIn.mht
      Added LinkedIn snapshot
      Added link to mod LI profile
      Added link to mod LI profile
      Added favicon
      Increased font size
      Updated last changed date
      Removed extraneous CSS styling

Added GA

Google Analytics tags