@@ -1,3 +1,3 @@
 Added GA
 
-Google Analytics tags
+Google Analytics tags - fixing tag insertion within head
