@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" /><!-- Google tag (gtag.js) -->
-
-    <script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-CTJV98ZVLR"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTJV98ZVLR"></script>
     <script>
-    <![CDATA[
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-          gtag('config', 'G-CTJV98ZVLR');
-    ]]>
+      gtag('config', 'G-CTJV98ZVLR');
     </script>
     <meta name="generator" content="HTML Tidy for HTML5 for Apple macOS version 5.8.0" />
     <title>JCollinsMSc_Bioinformatics-DataScience_Resume_2022</title>
@@ -20,10 +17,7 @@
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async="async" defer=
     "defer"></script>
     <style>
-        <![CDATA[
-        < ![CDATA[ @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,700,900|Josefin+Sans:100,200,300,400|Lato:100,200,300,400,500,600|Muli:200,300,400,600,700|Open+Sans:300,400,600,700,800|Oswald:200,300,400,500,600,700|Raleway:100,200,300,400,500&amp;subset=latin-ext');
-        ]]>
-        ]]>
+        @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,700,900|Josefin+Sans:100,200,300,400|Lato:100,200,300,400,500,600|Muli:200,300,400,600,700|Open+Sans:300,400,600,700,800|Oswald:200,300,400,500,600,700|Raleway:100,200,300,400,500&amp;subset=latin-ext');
     </style>
 </head>
 <body id="JCollinsMSc_Bioinformatics-DataScience_Resume_2022" lang="en-US" xml:lang="en-US">
